Update ob-sql-parser version and optimize Boolean parsing